[package]
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
description = "An embedded-hal based driver for ePaper displays with chip: GDE021A1 (172x72 B/W via SPI)"
documentation = "https://doc.rs/epd-gde021a1"
homepage = "https://github.com/almedso/epd-gde021a1"
repository = "https://github.com/almedso/epd-gde021a1"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded", "ePaper", "Display", "epd", "gde021a1"]
license-file = "License.md"
name = "epd-gde021a1"
readme = "README.md"
version = "0.1.1"
edition = "2018"
exclude = [
    ".gitignore",
    ".github/*",
    ".travis.yml",
]

[badges]
# travis-ci = { repository = "almedso/epd-dge021a1" }

[dependencies]
embedded-graphics = { version = "0.6.1", optional = true}
embedded-hal = {version = "0.2.3", features = ["unproven"]}
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.2", default-features = false }

[dev-dependencies]
cortex-m = "^0.6.2"
cortex-m-rt = "^0.6.10"
panic-halt = "^0.2.0"
stm32l0xx-hal = { version = "0.6.2", features = ["stm32l0x3", "io-STM32L051", "rt"] }

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]

